k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-website

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: my-website

  template:
    metadata:
      labels:
        app: my-website

    spec:
      terminationGracePeriodSeconds: 30

      serviceAccountName: my-website
      automountServiceAccountToken: false

      imagePullSecrets:
        - name: ghcr-secret

      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: my-website
          image: ghcr.io/atefchelaghma/digital-experience:sha-df899fa
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 30
            periodSeconds: 2
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
